2016-01-28 13:48  rsbivand

	* DESCRIPTION, R/kmlPoints.R, man/kmlPoints.Rd, man/wrld_simpl.Rd,
	  src/pip.c: remove S.h from src/pip.c

2015-10-28 21:01  rsbivand

	* data/wrld_simpl.rda: tidy

2015-10-14 13:07  rsbivand

	* DESCRIPTION, inst/README, inst/shapes/Testing.kml,
	  inst/shapes/tessellate.kml, man/getKMLcoordinates.Rd: tidy

2015-10-14 07:06  rsbivand

	* inst/README: tidy

2015-10-13 14:43  rsbivand

	* man/as.ppp.Rd: tidy

2015-10-13 12:36  rsbivand

	* DESCRIPTION, R/getKMLcoordinates.R, inst/README,
	  inst/shapes/tessellate.kml, man/getKMLcoordinates.Rd: fix
	  getKMLcoordinates bug

2015-10-13 12:31  rsbivand

	* man/nowrapSpatialLines.Rd: tidy

2015-09-28 22:20  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2015-09-28 22:19  rsbivand

	* ChangeLog, DESCRIPTION, NAMESPACE, R/nowrapRecenter.R,
	  R/sp_spat1.R, man/as.ppp.Rd, man/gzAzimuth.Rd: tidy

2015-07-03 11:21  rsbivand

	* R/nowrapRecenter.R, R/sp_spat1.R, R/spmaps.R: nowrapSL to rgeos

2015-06-30 21:16  rsbivand

	* DESCRIPTION, R/sp_spat1.R, man/as.ppp.Rd: RasterLayer to im
	  coercion

2015-06-30 05:52  rsbivand

	* DESCRIPTION, NAMESPACE, R/nowrapRecenter.R, R/spmaps.R,
	  man/map2SpatialPolygons.Rd, man/nowrapRecenter.Rd: nowrap
	  revisions

2015-06-28 15:17  rsbivand

	* DESCRIPTION, NAMESPACE, R/nowrapRecenter.R: CRAN
	  _R_CHECK_CODE_USAGE_WITH_ONLY_BASE_ATTACHED_=true NAMESPACE tidy

2015-06-10 13:55  rsbivand

	* DESCRIPTION, R/colslegs.R, man/leglabs.Rd, man/sp2Mondrian.Rd,
	  vignettes/combine_maptools.Rnw: reverse leglabs

2015-04-24 10:26  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2015-04-24 10:25  rsbivand

	* DESCRIPTION, R/checkHoles.R: remove gc() and rm() from checkHoles

2015-04-23 10:19  rsbivand

	* ChangeLog, inst/ChangeLog, svn2cl.xsl: tidy

2015-04-20 13:21  rsbivand

	* DESCRIPTION, R/checkHoles.R, R/sp2pbs.R, man/GE_SpatialGrid.Rd,
	  man/kmlLine.Rd, man/kmlLines.Rd, man/kmlOverlay.Rd,
	  man/nowrapRecenter.Rd: cleaning oddities, mostly adding +ellps=
