@@ -1,6 +1,6 @@
 Package: maptools
-Version: 0.8-39
-Date: 2016-01-28
+Version: 0.8-40
+Date: 2016-11-14
 Title: Tools for Reading and Handling Spatial Objects
 Authors@R: c(
 	person("Roger", "Bivand", role = c("cre", "aut"), email = "Roger.Bivand@nhh.no"),
@@ -40,11 +40,11 @@ Imports: foreign (>= 0.8), methods, grid, lattice, stats, utils,
 Suggests: rgeos (>= 0.1-8), spatstat (>= 1.18), PBSmapping, maps,
         RColorBrewer, raster, polyclip
 Enhances: gpclib, RArcInfo
-Description: Set of tools for manipulating and reading geographic data, in particular ESRI shapefiles; C code used from shapelib. It includes binary access to GSHHG shoreline files. The package also provides interface wrappers for exchanging spatial objects with packages such as PBSmapping, spatstat, maps, RArcInfo, Stata tmap, WinBUGS, Mondrian, and others.
+Description: Set of tools for manipulating and reading geographic data, in particular 'ESRI Shapefiles'; C code used from 'shapelib'. It includes binary access to 'GSHHG' shoreline files. The package also provides interface wrappers for exchanging spatial objects with packages such as 'PBSmapping', 'spatstat', 'maps', 'RArcInfo', 'Stata tmap', 'WinBUGS', 'Mondrian', and others.
 License: GPL (>= 2)
 URL: http://r-forge.r-project.org/projects/maptools/
 NeedsCompilation: yes
-Packaged: 2016-01-29 08:38:18 UTC; rsb
+Packaged: 2016-11-15 10:52:21 UTC; rsb
 Author: Roger Bivand [cre, aut],
   Nicholas Lewin-Koh [aut],
   Edzer Pebesma [ctb],
@@ -77,4 +77,4 @@ Author: Roger Bivand [cre, aut],
   Rolf Turner [ctb]
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
 Repository: CRAN
-Date/Publication: 2016-01-30 00:08:33
+Date/Publication: 2016-11-15 14:17:59
