@@ -1,7 +1,7 @@
-88bb01d7ff9cbe9670db7e17ae7823ef *ChangeLog
-14ca7484164b6e375571b2c3f3d32d1b *DESCRIPTION
+dd6a2179f11be8986db63276df27700d *ChangeLog
+931ac5299c8cf7e180ac92289a2c5890 *DESCRIPTION
 4d4a9bdb4985c6a95a4b81c62a35a446 *NAMESPACE
-c7584403c09826f9a2f952d28541b2ec *R/AAA.R
+3e564b20f31570f99adea4d0d58ee09f *R/AAA.R
 1399d0064b46e6e6c90600b1b64a5e19 *R/CCmaps.R
 d7210b92daad70dc7a3f7b10f676ccff *R/DP.R
 b52e6bfd6272c6c26bec32d86332d830 *R/GE_png.R
@@ -52,17 +52,17 @@ beb695c582d1c3aaa519cedd375e2c38 *R/subset.R
 7149e328828e259e39b14f0a2bdf5c1b *R/sun.R
 7abdc8ab97cb14f48d1c2fd8962148a2 *R/union.R
 89e84c8fec40a5e2d0482ae8642a5244 *R/zzz.R
-e76534459020e69c4f18f90ee36a470d *build/vignette.rds
+b4a69fb18edaede01414e495b4b89cba *build/vignette.rds
 d0b8c2ac5cb2ac40fff68a7b329df381 *data/SplashDams.rda
 ad794d2bb004f79c29d6d20a9341a0ec *data/gpcholes.rda
 f58d7bbadb55463c773ef91b74f7e6cf *data/state.vbm.rda
-6986d6b0b1be13fff069ed7ad55c6184 *data/wrld_simpl.rda
-88bb01d7ff9cbe9670db7e17ae7823ef *inst/ChangeLog
+09ee055ece6058a49d5146c6ced84325 *data/wrld_simpl.rda
+dd6a2179f11be8986db63276df27700d *inst/ChangeLog
 9dcaa361f3f79d17885b738121fc669e *inst/README
 0d1e185186bdb70959760c0a63f7be4f *inst/changes
 b358c2168f0fb80129000e8a46943a49 *inst/doc/combine_maptools.R
 2e20fa712d38ce5c0670ee48a2459ee3 *inst/doc/combine_maptools.Rnw
-ac3e9abb1871d168c679b7f3cf979c74 *inst/doc/combine_maptools.pdf
+12140e3903670d9eabee2947cd07eeec *inst/doc/combine_maptools.pdf
 ef247b6c335e75e48f81da7ef7554fa6 *inst/grids/simple.ag
 15c2101eb916ea116f400d560f73dd7c *inst/grids/test.ag
 17238eca9084a1321e2dc9a719ef8dd6 *inst/shapes/Testing.kml
@@ -129,7 +129,7 @@ c5f20bfb6b29271ed4868200d37d5b95 *man/lineLabel.Rd
 faeaff841d01f23c46e359dcac2f95e0 *man/nearestPointOnLine.Rd
 4c4dfe73ec4e6c87be454a6f0cb53f0a *man/nearestPointOnSegment.Rd
 c36646e1bfddab22e519229756e230d2 *man/nowrapRecenter.Rd
-c7076249d8e47f81debbb586b017e12d *man/nowrapSpatialLines.Rd
+62d2ebe7e9ebeaf23e448d53397fd250 *man/nowrapSpatialLines.Rd
 e941e4c0fe856263cca3eeafd3a81c09 *man/pal2SpatialPolygons.Rd
 2192d5eded3e8cea9af4c39a6c90fb50 *man/pointLabelBase.Rd
 742213470de35c3663880b6e44dc6479 *man/pointLabelLattice.Rd
